improve exercise highlights with markdown

--- a/.exercise_0004.md
+++ b/.exercise_0004.md
@@ -1,12 +1,12 @@
-				QUITTING VIM
+# QUITTING VIM
+
+ Vim has two keybindings to quickly quit it:
+
+ ZZ    Quit and save file
+ ZQ    Quit without saving file
 
 
-     Vim has two keybindings to quickly quit it:
-
-     ZZ    Quit and save file
-     ZQ    Quit without saving file
-
-Exercise:
+## Exercise
 
   1. Fill the [ ] below with a capital X
 
@@ -18,11 +18,3 @@ Exercise:
 
 
 [X] I have finished this lesson
-
-
-NOTES:
-
-  1. You must be in NORMAL mode (press  Esc  to make sure)
-
-  2. The letters must be capital (holding  Shift  or enabling  Caps Lock )
-
